@@ -19,6 +19,9 @@
  * along with Quantum++.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#include <cmath>
+#include <vector>
+#include <list>
 #include "gtest/gtest.h"
 #include "qpp.h"
 
@@ -30,18 +33,32 @@ using namespace qpp;
 /// BEGIN template<typename T> struct qpp::is_complex
 TEST(qpp_is_complex, AllTests)
 {
-
+    EXPECT_TRUE(qpp::is_complex<std::complex<double>>::value);
+    EXPECT_TRUE(qpp::is_complex<std::complex<int>>::value);
+    EXPECT_FALSE(qpp::is_complex<double>::value);
+    EXPECT_FALSE(qpp::is_complex<cmat>::value);
 }
 /******************************************************************************/
 /// BEGIN template<typename T> struct qpp::is_iterable
 TEST(qpp_is_iterable, AllTests)
 {
-
+    EXPECT_TRUE(qpp::is_iterable<std::vector<int>>::value);
+    EXPECT_TRUE(qpp::is_iterable<std::list<double>>::value);
+    EXPECT_FALSE(qpp::is_iterable<cmat>::value);
+    EXPECT_FALSE(qpp::is_iterable<int[10]>::value);
 }
 /******************************************************************************/
 /// BEGIN template<typename T> struct qpp::is_matrix_expression
 TEST(qpp_is_matrix_expression, AllTests)
 {
+    dmat A, B, C, D;
+    int x{}, y{}, z{};
 
+    EXPECT_TRUE(qpp::is_matrix_expression<decltype(3 * A)>::value);
+    EXPECT_TRUE(qpp::is_matrix_expression<decltype(A + B)>::value);
+    EXPECT_TRUE(qpp::is_matrix_expression<decltype(A + B * C)>::value);
+    EXPECT_TRUE(qpp::is_matrix_expression<decltype(D * D * D)>::value);
+
+    EXPECT_FALSE(qpp::is_matrix_expression<decltype(x + y * z)>::value);
 }
 /******************************************************************************/
